[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/SceneTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Player/Player_R.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run9.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run10.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run7.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player_Run/R_Run1.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "RUN",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.78054, 7.18038 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.74036, 7.30212 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "RUN"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.41421, -0.707108 )
shape = SubResource( 2 )

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 8, 8 )
monitorable = false
collision_mask = 2147483664

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -6.58579, -8.70711 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ColorRect" parent="." instance=ExtResource( 1 )]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="area_shape_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_shape_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
